<resources>
    <string name="app_name">MyPet</string>
    <string name="btn_todo">To Do</string>
    <string name="btn_reminder">Reminders</string>
    <string name="btn_petGrow">Pet Growth</string>
    <string name="tv_name">Descripition</string>
    <string name="tv_contact">Contact</string>
    <string name="tv_price">Price</string>
    <string name="textView3">Search Here...</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_pro_name">Name</string>
    <string name="tv_pro_email">Email</string>
    <string name="tv_pro_contactNo">Contact No</string>
    <string name="tv_pro_address">Address</string>

    <string name="textView">Search here....</string>
    <string name="textView2">xxxxxxxxxxxxxx</string>
    <string name="textView31">Logout</string>
    <string name="button">Logout</string>
    <string name="button2">Added Sell/Donate Pets Ads</string>
    <string name="button3">Added Desire Pets Ads</string>
    <string name="button4">Added Items Ads</string>

</resources>