<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/sell"
        android:text="@string/button2"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="184dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="278dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/desire"
        android:text="@string/button3"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="293dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="276dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/Items"
        android:text="@string/button4"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="410dp" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/imagebutton"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/upper_toolbar"
            android:layout_width="417dp"
            android:layout_height="111dp"
            android:background="@color/imagebutton"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="364dp"
            android:layout_height="26dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

        </SearchView>

        <TextView
            android:id="@+id/textViewT1"
            android:layout_width="136dp"
            android:layout_height="23dp"
            android:text="@string/textView3"
            android:textColor="#BC000000"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchView" />

        <ImageButton
            android:id="@+id/imageButto"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:backgroundTint="#D85A5A"
            app:layout_constraintBottom_toBottomOf="@+id/upper_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/upper_toolbar"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/upper_toolbar"
            app:layout_constraintTop_toTopOf="@+id/upper_toolbar"
            app:layout_constraintVertical_bias="0.189"
            app:srcCompat="@drawable/hanb" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="121dp"
            android:layout_height="69dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewT1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423"
            app:srcCompat="@drawable/ptl" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/homeb" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="37dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:srcCompat="@drawable/shop" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="63dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/prof" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView15"
            app:srcCompat="@drawable/todo" />

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="296dp"
            android:layout_height="634dp"
            android:background="@color/hambg"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="96dp"
            android:layout_height="81dp"
            app:srcCompat="@drawable/user"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="87dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="101dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/logout"
            android:text="@string/button"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="128dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="131dp"
            android:layout_height="32dp"
            android:text="@string/textView2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="80dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>